[package]
name = "nearw"
version = "0.1.0"
edition = "2021"
description = "NEAR Protocol CLI wallet"
license = "MIT"

[[bin]]
name = "nearw"
path = "src/main.rs"

[dependencies]
near-api = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
owo-colors = "4"
inquire = "0.7"
qrcode = "0.14"
dirs = "6"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# Patch slipped10 to remove supply chain sabotage in v0.4.7
# (random ~1.25% panic injected into BIP32 path parsing and key derivation)
[patch.crates-io]
slipped10 = { path = "vendor/slipped10" }
